added answer to the Question

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+;
 }
 
 .logo {
@@ -40,6 +41,8 @@
 .read-the-docs {
   color: #888;
 }
+
+
 $bg-color: #0e0e0e;
 $bg-pattern-color: #1f1f1f;
 $neon-line-color: #ff00ff;
