--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -12,6 +12,7 @@ $button-hover-text-color: #00ff00;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
+    margin: 2.5rem;
     transition: background-color 0.3s, border-color 0.3s, color 0.3s;
 
     &:hover {
