--- a/src/App.scss
+++ b/src/App.scss
@@ -6,41 +6,41 @@
 ;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+// .logo {
+//   height: 6em;
+//   padding: 1.5em;
+//   will-change: filter;
+//   transition: filter 300ms;
+// }
+// .logo:hover {
+//   filter: drop-shadow(0 0 2em #646cffaa);
+// }
+// .logo.react:hover {
+//   filter: drop-shadow(0 0 2em #61dafbaa);
+// }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+// @keyframes logo-spin {
+//   from {
+//     transform: rotate(0deg);
+//   }
+//   to {
+//     transform: rotate(360deg);
+//   }
+// }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
+// @media (prefers-reduced-motion: no-preference) {
+//   a:nth-of-type(2) .logo {
+//     animation: logo-spin infinite 20s linear;
+//   }
+// }
 
-.card {
-  padding: 2em;
-}
+// .card {
+//   padding: 2em;
+// }
 
-.read-the-docs {
-  color: #888;
-}
+// .read-the-docs {
+//   color: #888;
+// }
 
 
 $bg-color: #0e0e0e;
@@ -51,6 +51,10 @@ $glow-color: rgba(0, 255, 0, 0.5);
 
 body {
   background-color: $bg-color;
+  background: url(./assets/J4o.gif);
+  background-repeat: no-repeat; 
+  background-size: cover;      
+  background-position: center; 
   color: #fff;
   font-family: Arial, sans-serif;
   display: flex;
