--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -5,6 +5,14 @@ $button-hover-bg-color: #333;
 $button-hover-border-color: #ff00ff;
 $button-hover-text-color: #00ff00;
 
+.categoryName{
+    border: 2px solid #00ff00;
+    font-weight: 600;
+    font-size: 1.5rem;
+    margin: 1rem;
+    padding: 2rem;
+
+}
 .price-button {
     background-color: $button-bg-color;
     border: 2px solid $button-border-color;
