--- a/src/App.scss
+++ b/src/App.scss
@@ -1,24 +1,18 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
   padding: 2rem;
   text-align: center;
-;
+
 }
 
 $bg-color: #0e0e0e;
-$bg-pattern-color: #1f1f1f;
-$neon-line-color: #ff00ff;
-$circuit-line-color: #00ff00;
-$glow-color: rgba(0, 255, 0, 0.5);
-
+$white: #fff;
 body {
   background-color: $bg-color;
   background: url(./assets/J4o.gif);
-  background-repeat: no-repeat; 
-  background-size: cover;      
-  background-position: center; 
-  color: #fff;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: $white;
   font-family: Arial, sans-serif;
   display: flex;
   justify-content: center;
@@ -27,60 +21,4 @@ body {
   margin: 0;
   overflow: hidden;
 
-  &:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(45deg, $bg-color 25%, $bg-pattern-color 25%, $bg-pattern-color 50%, $bg-color 50%, $bg-color 75%, $bg-pattern-color 75%, $bg-pattern-color);
-    background-size: 50px 50px;
-    opacity: 0.1;
-    z-index: -1;
-  }
-
-  &:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url('/path-to-your-circuit-board-pattern.png'); // replace with your circuit board pattern image path
-    background-size: cover;
-    opacity: 0.05;
-    z-index: -1;
-  }
-}
-
-.neon-text {
-  color: $neon-line-color;
-  text-shadow: 0 0 5px $neon-line-color, 0 0 10px $neon-line-color, 0 0 20px $neon-line-color, 0 0 40px $glow-color, 0 0 80px $glow-color, 0 0 90px $glow-color, 0 0 100px $glow-color, 0 0 150px $glow-color;
-}
-
-.neon-line {
-  position: absolute;
-  width: 2px;
-  height: 100%;
-  background: $neon-line-color;
-  box-shadow: 0 0 5px $neon-line-color, 0 0 10px $neon-line-color, 0 0 20px $neon-line-color, 0 0 40px $glow-color, 0 0 80px $glow-color, 0 0 90px $glow-color, 0 0 100px $glow-color, 0 0 150px $glow-color;
-  animation: flicker 1.5s infinite alternate;
-
-  &:nth-child(2) {
-    left: 50%;
-    top: 0;
-    width: 100%;
-    height: 2px;
-    animation-delay: 0.5s;
-  }
-}
-
-@keyframes flicker {
-  0%, 100% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.5;
-  }
 }
