--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -4,3 +4,10 @@
     font-weight: 400;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Price';
+    src: url("../src/assets/typography/ManoloMono.otf");
+    font-weight: 300;
+    font-style: normal;
+}
