--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,6 @@
+@use './styles/partials/typography' as *;
+@use './styles/partials/variable' as *;
+
 #root {
   padding: 2rem;
   text-align: center;
@@ -7,6 +10,7 @@
 $bg-color: #0e0e0e;
 $white: #fff;
 body {
+  font-family: 'Jeopardy';
   background-color: $bg-color;
   background: url(./assets/J4o.gif);
   background-repeat: no-repeat;
@@ -15,10 +19,8 @@ body {
   color: $white;
   font-family: Arial, sans-serif;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   height: 100vh;
   margin: 0;
-  overflow: hidden;
-
 }
