--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -3,11 +3,15 @@
 
 .categoryName{
     border: 2px solid $button-border-color;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-weight: 600;
     font-size: 1.5rem;
     margin: 1rem;
     padding: 2rem;
     width: 23rem;
+    height: 4rem;
 
 }
 .price-button {
