--- a/src/App.scss
+++ b/src/App.scss
@@ -13,14 +13,11 @@ body {
   font-family: 'Jeopardy';
   background-color: $bg-color;
   background: url(./assets/J4o.gif);
-  background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   color: $white;
   font-family: Arial, sans-serif;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
   height: 100vh;
+  width: 100vw;
   margin: 0;
 }
