--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -2,28 +2,42 @@
 @use '../../styles/partials/variable' as *;
 
 .category {
-    width: 23rem;
+    width: 20rem;
+
+    &__name {
+        font-family: 'Price';
+        border: 2px solid $button-border-color;
+        background-color: white;
+        color: black;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        font-weight: 600;
+        padding: 0;
+        margin: 1rem;
+        font-size: 1rem;
+        height: 5rem;
+
+        p {
+            margin: 0;
+            padding: .5rem;
+            display: flex;
+        }
+    }
 }
-.categoryName{
-    border: 2px solid $button-border-color;
+
+.price-button {
+    font-family: 'Price';
     display: flex;
     align-items: center;
     justify-content: center;
-    font-weight: 600;
-    font-size: 1.5rem;
-    margin: 1rem;
-    padding: 2rem;
-    width: 23rem;
-    height: 4rem;
-
-}
-.price-button {
-    font-family: 'Price';
     background-color: $button-bg-color;
     border: 2px solid $button-border-color;
     color: $button-text-color;
     padding: 10px 20px;
     font-size: 16px;
+    height: 5rem;
     cursor: pointer;
     margin: 1rem;
     transition: background-color 0.3s, border-color 0.3s, color 0.3s;
