--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -7,7 +7,7 @@
 
 @font-face {
     font-family: 'Price';
-    src: url("../src/assets/typography/ManoloMono.otf");
+    src: url("../src/assets/typography/spacemono.ttf");
     font-weight: 300;
     font-style: normal;
 }
